# CryptoEdge-Lab

./: .gitignore  .npmrc  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
docs/: 00_MASTER_PLAN.md  01_ARCHITECTURE.md  02_DATABASE.md  03_DATA_SOURCES.md  04_EDGE_DISCOVERY.md  05_EDGE_EVALUATION.md  06_UI_UX.md  07_AI_INTEGRATION.md  08_API_SPEC.md  09_ROADMAP.md  10_RISKS.md  11_TESTING.md  12_OPERATIONS.md  13_FREE_TIER_PLAN.md  14_EDGE_PACK_V1.md  15_ROADMAP_AUDIT_2026-07.md  (+8 more)
research/: pyproject.toml
research/src/cryptoedge_research/dsl/: evaluator.py
research/src/cryptoedge_research/eval/: backtest.py  bootstrap.py  dsr.py  metrics.py  permutation.py  pipeline.py  verdict.py  walk_forward.py
research/src/cryptoedge_research/features/: compute.py  ops.py  registry.py
research/src/cryptoedge_research/io/: internal_client.py  lake.py
research/src/cryptoedge_research/jobs/: backup.py  deriv_sync.py  events_backfill.py  features_sync.py  lake_sync.py  nightly.py  on_demand.py
research/src/cryptoedge_research/packs/: daily_briefing.py
research/src/cryptoedge_research/regimes/: rule_based.py
research/tests/: test_backtest.py  test_backup.py  test_bootstrap.py  test_daily_briefing.py  test_deriv_sync.py  test_dsl_evaluator.py  test_dsr.py  test_events_backfill.py  test_features_compute.py  test_features_ops.py  test_features_sync.py  test_internal_client.py  test_lake.py  test_lake_sync.py  test_metrics.py  test_nightly.py  test_on_demand.py  test_permutation.py  test_pipeline.py  test_regimes.py  test_verdict.py  test_walk_forward.py
(+116 files in other folders)
