[project]
name = "cryptoedge-research"
version = "0.1.0"
description = "GitHub Actions research worker: EEP, discovery, regimes (docs/01 §6, docs/05)"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "scipy>=1.14",
  "statsmodels>=0.14",
  "pyarrow>=17.0",
  "httpx>=0.27",
  "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptoedge_research"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: end-to-end EEP pipeline tests on synthetic data (docs/11 §3.1), a few seconds each",
]
